# Computer-Graphics

./: .gitignore
CG/: CMakeLists.txt  Camera.cpp  Camera.h  CameraEventHandler.cpp  CameraEventHandler.h  Event.cpp  Event.h  EventHandler.cpp  KeyboardEventHandler.cpp  Matrix4.cpp  Matrix4.h  MouseEventArgs.cpp  MouseEventArgs.h  MouseEventHandler.cpp  MouseEventHandler.h  Point.cpp  Point.h  Quaternion.cpp  Quaternion.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Vector.cpp  Vector.h  Vector4.cpp  Vector4.h  Window.cpp  Window.h  frag.glsl  gl_math.cpp  gl_math.h  main.cpp  vert.glsl
CG/include/: Camera.h  CameraEventHandler.h  EventHandler.h  GameManager.h  KeyboardEventHandler.h  Light.h  Matrix4.h  Model.h  MouseEventHandler.h  Point.h  Quaternion.h  Shader.h  ShaderProgram.h  TestUtils.h  Texture.h  Vector.h  gl_math.h
CG/shaders/fragment/: frag.glsl
CG/shaders/vertex/: vert.glsl
CG/src/: Camera.cpp  CameraEventHandler.cpp  Event.cpp  EventHandler.cpp  GameManager.cpp  KeyboardEventHandler.cpp  Light.cpp  Matrix4.cpp  Model.cpp  MouseEventArgs.cpp  MouseEventHandler.cpp  Point.cpp  Quaternion.cpp  Shader.cpp  ShaderProgram.cpp  TestUtils.cpp  Texture.cpp  Vector.cpp  Window.cpp  gl_math.cpp  main.cpp
Lectures/: cg  lec1.txt  lec2.txt  lec3.txt
Task1/: CMakeLists.txt  Shader.cpp  Shader.h  frag.glsl  main.cpp  vert.glsl
test/: main.cpp
